package signalEventsDemo;
syntax = "proto3";

message PreKeyBundleMessage {
  bytes IdentityPubKey = 1;
  int32 RegistrationId = 2;
  int32 DeviceId = 3;
  int32 PreKeyId = 4;
  bytes PreKeyPublicKey = 5;
  int32 SignedPreKeyId = 6;
  bytes SignedPreKeyPublicKey = 7;
  bytes SignedPreKeySignature = 8;
}
